--- a/IELTS_PROJECT/src/main/java/com/mycompany/ielts_project/MainFrame.form
+++ b/IELTS_PROJECT/src/main/java/com/mycompany/ielts_project/MainFrame.form
@@ -60,9 +60,9 @@
                               <Component id="jLabel2" alignment="0" min="-2" pref="95" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="txtPasswd" min="-2" pref="188" max="-2" attributes="0"/>
-                              <Component id="txtUser" min="-2" pref="223" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                              <Component id="txtUser" pref="223" max="32767" attributes="0"/>
+                              <Component id="txtPasswd" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
